# bws-cache

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  build-reqs.txt  entrypoint.sh  example.py  pyproject.toml  renovate.json  requirements.txt
.github/workflows/: ansible.yml  build.yml  check-version.yml  ci.yml  lint.yml  release.yml
ansible_collection/: .ansible-lint  .ansible-lint-ignore  CHANGELOG.md  README.md  ansible.cfg  galaxy.yml  test.yml
ansible_collection/meta/: runtime.yml
ansible_collection/plugins/lookup/: secret.py
ansible_lookup/: bws_cache.py
server/: .envrc  client.py  errors.py  models.py  prom_client.py  reqs.txt  reqsp2.txt  requirements.txt  server.py  version.py
server/bitwarden_sdk/: bitwarden_client.py  schemas.py
