[tool.poetry]
name = "bws-cache"
version = "0.1.0"
description = ""
authors = ["ripple <github@ripple.contact>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "~3.13"
fastapi = "^0.115.6"
prometheus-client = "^0.22.0"
pyyaml = "^6.0.2"
uvicorn = "^0.35.0"
requests = "^2.32.3"
bws-sdk = "0.1.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.12.0"
types-requests = "^2.32.0.20241016"
ansible-core = "^2.18.2"
pre-commit = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "W1", "W2", "F", "RUF", "I"]
